CLI build instructions